WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117807
Incorrect use of jsCast in a finalizer
https://bugs.webkit.org/show_bug.cgi?id=117807
Summary
Incorrect use of jsCast in a finalizer
Oliver Hunt
Reported
2013-06-19 12:17:38 PDT
Incorrect use of jsCast in a finalizer
Attachments
Patch
(1.39 KB, patch)
2013-06-19 12:18 PDT
,
Oliver Hunt
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2013-06-19 12:18:49 PDT
Created
attachment 205027
[details]
Patch
Geoffrey Garen
Comment 2
2013-06-19 12:21:40 PDT
Comment on
attachment 205027
[details]
Patch r=me
Oliver Hunt
Comment 3
2013-06-19 12:45:18 PDT
Committed
r151747
: <
http://trac.webkit.org/changeset/151747
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug