Incorrect use of jsCast in a finalizer https://bugs.webkit.org/show_bug.cgi?id=117807

Reviewed by Geoffrey Garen.

We can't use jsCast in a finalizer as it checks an object's structure,
and the structure may already have been swept by that point.  Use a
static_cast instead.

* bridge/runtime_array.cpp:
(JSC::RuntimeArray::destroy):

Canonical link: https://commits.webkit.org/135935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151747 268f45cc-cd09-0410-ab3c-d52691b4dbfc